# CROUStillantBot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __main__.py  discord-notification-end.json  discord-notification-start.json  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deployment.yaml
CROUStillantBot/: bot.py
CROUStillantBot/cogs/: Beta.py  Checks.py  Commands.py  Development.py  Errors.py  Events.py  Menus.py  Mobile.py  Settings.py  Tasks.py
CROUStillantBot/entities/: entities.py  logs.py  menus.py  parametres.py  plats.py  regions.py  restaurants.py  stats.py  types_restaurants.py
CROUStillantBot/utils/: autocomplete.py  cache.py  constants.py  convert.py  date.py  exceptions.py  functions.py  modal.py  views.py
CROUStillantBot/views/: error.py  info.py  list.py  menu.py  restaurant.py
