[project]
name = "croustillantbot"
version = "1.0.0"
description = "CROUStillanT Bot, a Discord bot for CROUStillant."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "async-timeout>=5.0.1",
    "asyncpg>=0.30.0",
    "discord-py>=2.5.2",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
]
